# nus-cs3203

./: .gitignore  .travis,yml  .travis.yml
.semaphore/: semaphore.yml
Team00/Code00/: CMakeLists.txt  Contact.csv
Team00/Code00/build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  autotester.sln  cmake_install.cmake
Team00/Code00/lib/: catch.hpp
Team00/Code00/src/spa/: CMakeLists.txt
Team00/Code00/src/spa/src/: AssignBank.cpp  AssignBank.h  AssignEvaluator.cpp  AssignEvaluator.h  AssignParser.cpp  AssignParser.h  Bank.cpp  Bank.h  CallParser.cpp  CallParser.h  CheckerUtil.cpp  CheckerUtil.h  DesignExtractor.cpp  DesignExtractor.h  ErrorMessages.h  FollowsBank.cpp  FollowsBank.h  FollowsEvaluator.cpp  FollowsEvaluator.h  FollowsStarBank.cpp  FollowsStarBank.h  FollowsStarEvaluator.cpp  FollowsStarEvaluator.h  IfParser.cpp  IfParser.h  ModifiesBank.cpp  ModifiesBank.h  ModifiesEvaluator.cpp  ModifiesEvaluator.h  PKB.cpp  PKB.h  PQLParser.cpp  PQLParser.h  PQLValidator.cpp  PQLValidator.h  ParentBank.cpp  ParentBank.h  ParentEvaluator.cpp  ParentEvaluator.h  ParentStarBank.cpp  (+35 more)
Team00/Code00/src/spa/src/pql_dto/: Entity.cpp  Entity.h  FollowsRelationship.cpp  ModifiesRelationship.cpp  ParentRelationship.cpp  Pattern.cpp  Pattern.h  Relationships.cpp  Relationships.h  UsesRelationship.cpp
Team00/Code00/src/unit_testing/: CMakeLists.txt
Team00/Code00/src/unit_testing/src/: TestAST.cpp  TestAssignBank.cpp  TestAssignParser.cpp  TestBank.cpp  TestCallParser.cpp  TestCheckerUtil.cpp  TestDeclareClauseParser.cpp  TestDesignExtractor.cpp  TestEntity.cpp  TestFollowsBank.cpp  TestFollowsEvaluator.cpp  TestFollowsStarBank.cpp  TestFollowsStarEvaluator.cpp  TestIfParser.cpp  TestModifiesBank.cpp  TestPKB.cpp  TestPQLParser.cpp  TestParentBank.cpp  TestParentStarBank.cpp  TestParserInvoker.cpp  TestPattern.cpp  TestPatternClauseParser.cpp  TestPrintParser.cpp  TestProcedure.cpp  TestProcedureAnalyser.cpp  TestQueryEvaluator.cpp  TestReadParser.cpp  TestRelationships.cpp  TestSelectClauseParser.cpp  TestStatement.cpp  TestStatementListParser.cpp  TestStringUtil.cpp  TestSuchThatClauseParser.cpp  TestTypeBank.cpp  TestUsesBank.cpp  TestWhileParser.cpp
Team00/Code00/tests/: backup_query.txt  backup_source.txt  out.xml  (+6 more)
Team11/Code11/: .gitignore  CMakeLists.txt  otherstesterutil.py  testerutil.py
Team11/Code11/src/integration_testing/: CMakeLists.txt
Team11/Code11/src/integration_testing/src/: PKBStub.cpp  TestCallParserPKB.cpp  TestFrontEnd.cpp  TestIfParserPKB.cpp  TestPQL.cpp  TestWhileParserPKB.cpp
Team11/Code11/src/spa/: CMakeLists.txt
Team11/Code11/src/spa/src/: AffectsBipCompute.cpp  AffectsBipCompute.h  AffectsBipEvaluator.cpp  AffectsBipEvaluator.h  AffectsBipStarCompute.cpp  AffectsBipStarCompute.h  AffectsBipStarEvaluator.cpp  AffectsBipStarEvaluator.h  AffectsCompute.cpp  AffectsCompute.h  AffectsEvaluator.cpp  AffectsEvaluator.h  AffectsStarBipCompute.h  AffectsStarCompute.cpp  AffectsStarCompute.h  AffectsStarEvaluator.cpp  AffectsStarEvaluator.h  AssignBank.cpp  AssignBank.h  AssignEvaluator.cpp  AssignEvaluator.h  AssignParser.cpp  AssignParser.h  Bank.cpp  Bank.h  Cache.cpp  Cache.h  CallParser.cpp  CallParser.h  CallsBank.cpp  CallsBank.h  CallsEvaluator.cpp  CallsEvaluator.h  CallsStarBank.cpp  CallsStarBank.h  CallsStarEvaluator.cpp  CallsStarEvaluator.h  ComputeAffectsStar.cpp  ComputeAffectsStar.h  ConverterUtil.cpp  (+81 more)
Team11/Code11/src/spa/src/pql_dto/: AffectsBipRelationship.cpp  AffectsRelationship.cpp  CallsRelationship.cpp  Constraint.cpp  Constraint.h  Entity.cpp  Entity.h  FollowsRelationship.cpp  ModifiesRelationship.cpp  NextBipRelationship.cpp  NextRelationship.cpp  ParentRelationship.cpp  Pattern.cpp  Pattern.h  Relationships.cpp  Relationships.h  UsesRelationship.cpp  With.cpp  With.h
Team11/Code11/src/unit_testing/: CMakeLists.txt
Team11/Code11/src/unit_testing/src/: TestAffectsBipCompute.cpp  TestAffectsBipStarCompute.cpp  TestAffectsCompute.cpp  TestAffectsStarCompute.cpp  TestAssignBank.cpp  TestAssignParser.cpp  TestBank.cpp  TestCallsBank.cpp  TestCallsStarBank.cpp  TestComputeAffectsStar.cpp  TestConstraint.cpp  TestConverterUtil.cpp  TestDeclareClauseParser.cpp  TestDesignExtractor.cpp  TestEntity.cpp  TestFollowsStarBank.cpp  TestIfBank.cpp  TestIfParser.cpp  TestModifiesBank.cpp  TestNextBank.cpp  TestNextBip.cpp  TestNextBipStar.cpp  TestNextStarCompute.cpp  TestOptimizer.cpp  TestPKB.cpp  TestPQLParser.cpp  TestParentBank.cpp  TestParserInvoker.cpp  TestPattern.cpp  TestPatternClauseParser.cpp  TestProcBank.cpp  TestProcedureAnalyser.cpp  TestQueryEvaluator.cpp  TestRelationships.cpp  TestSelectClauseParser.cpp  TestStatement.cpp  TestStringUtil.cpp  TestSuchThatClauseParser.cpp  TestUsesBank.cpp  TestWhileBank.cpp  (+3 more)
(+152 files in other folders)
